updated README with geocoding, minor changes to html and css, adde geocoding functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<section role="region" id="homepage">
 		<h1>Date Night</h1>
 		<form class="search" role="form" id="search">
-			<label id="location" for="searchbar" class="js-hide-display">
+			<label id="location" for="locationBar" class="js-hide-display">
 				<p class="instructions">Enter location:</p>
 				<input id="locationBar" class=" locationBar" type="text" name="location" placeholder="Boston, MA" required="true">
 			</label>
