--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		</form>
 		<div id="buttons">
 		<p class="instructions">Or you can browse by activity:</p>
-			<button id="food"><img src="https://cdn2.iconfinder.com/data/icons/app-types-in-grey/512/food_and_drink_512pxGREY.png" alt="Picture of a loaf of bread and a bottle of wine"><br><span>Food</span></button>
-			<button id="drinks"><img src="https://cdn0.iconfinder.com/data/icons/website-kit-2/512/icon_70-512.png" alt="Picture of a martini glass"><br><span>Drinks</span></button>
-			<button id="entertainment"><img src="https://cdn2.iconfinder.com/data/icons/university-set-2/512/5-512.png" alt="Picture of theater masks"><br><span>Fun</span></button>
+			<button id="food" data-section="food"><img src="https://cdn2.iconfinder.com/data/icons/app-types-in-grey/512/food_and_drink_512pxGREY.png" alt="Picture of a loaf of bread and a bottle of wine"><br><span>Food</span></button>
+			<button id="drinks" data-section="drinks"><img src="https://cdn0.iconfinder.com/data/icons/website-kit-2/512/icon_70-512.png" alt="Picture of a martini glass"><br><span>Drinks</span></button>
+			<button id="entertainment" data-section="arts"><img src="https://cdn2.iconfinder.com/data/icons/university-set-2/512/5-512.png" alt="Picture of theater masks"><br><span>Fun</span></button>
 		</div>
 	</section>
 	<section id="container" class="js-hide-display" role="region">
