Added loading spinner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<section role="region" id="homepage">
+		<div class="cssload-loader" id="loader">Getting Location</div>
 		<h1>Date Night</h1>
 		<form class="search" role="form" id="search">
 			<label id="location" for="locationBar" class="js-hide-display">
