--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</label>
 			<label for="searchbar">
 				<p class="instructions">Looking for something specific?</p>
-				<input class=" searchbar" type="text" name="search" placeholder="Maybe some Chinese?">
+				<input class=" searchbar" type="text" name="search" placeholder="How about chinese?">
 			</label>
 			<label for="submit">
 				<button class="submit"><span>Search</span></button>
